blur-admin/app/stylesheets/partials/_base.scss
// UI lightness theme settings
$base-theme-color: #f6a828;
$base-theme-background-color: #eeeeee;

$red-color: #E01E00;
$orange-color: #DB8800;
$yellow-color: #FAFA2E;
$green-color: #95D169;
$blue-color: #C4D9FF;
$light-blue-color: mix(#fff,#C4D9FF,85%);
$grey-color: #EEEEEE;
$light-grey-color: #F0F0F0;

$font-color: #555;
$border_color: #999;

$border_width: 1px;
$border_style: solid;
$table_header_color: #C4D9FF;
$shaded_row_color: #F0F0F0;
$row-height: 50px;

// Page settings
$footer-height: 45px;

// Susy grid settings
$total-cols: 30;
$denominator: (($total-cols*5 + ($total-cols - 1) * 1 + 2 * 3) / 100);
$col-width: (5%/$denominator);
$gutter-width: (1%/$denominator);
$side-gutter-width: (3%/$denominator);
$show-grid-backgrounds: true;

// Mixins
@mixin standard-font {
  font-weight: bold;
  color: $font-color;
}

@mixin border        { border:        $border_width $border_style $border_color; }
@mixin border-bottom { border-bottom: $border_width $border_style $border_color; }
@mixin border-top    { border-top:    $border_width $border_style $border_color; }
@mixin border-sides  { border-left:   $border_width $border_style $border_color;
                       border-right:  $border_width $border_style $border_color; }

@mixin standard-border {
  @include border-radius;
  @include border;
}

// Page settings
body {
  @include container;
  margin:0 auto;
  background-color: $light-blue-color;
}

h2 { font-size: 200%; }

.ui-dialog { min-width: 300px; }

